<resources>
    <string name="app_name">TimeTrackingSystem</string>
    <string name="content_authority">com.citu.timetrackingsystem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="label_login">Login</string>
    <string name="label_home">Home</string>
    <string name="label_id_number">ID Number</string>
    <string name="label_password">Password</string>

    <string name="label_name">Name</string>
    <string name="label_age">Age</string>
    <string name="label_gender">Gender</string>
    <string name="label_address">Address</string>

    <string name="label_date">Date</string>
    <string name="label_time_in">Time in</string>
    <string name="label_time_out">Time out</string>

    <string name="action_users">Users</string>
    <string name="action_time_logs">Time Logs</string>
    <string name="action_time_logout">Logout</string>
    <string name="action_add">Add</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_time_in">Time In</string>
    <string name="action_time_out">Time Out</string>

    <string name="message_invalid_id_number_or_password">Invalid ID Number or Password</string>
    <string name="message_no_users">No Users</string>
    <string name="message_no_time_logs">No Time Logs</string>
    <string name="message_user_already_exist">User already exist</string>
    <string name="message_user_added">Added User</string>
    <string name="message_add_user_failed">Add User failed</string>
    <string name="message_user_updated">Updated User</string>
    <string name="message_update_user_failed">Update User failed</string>
    <string name="message_delete_user_failed">Delete User failed</string>
    <string name="message_user_deleted">User deleted</string>
    <string name="message_delete_time_log_failed">Delete Time Log failed</string>
    <string name="message_time_log_deleted">Time Log deleted</string>
    <string name="message_delete_user">Delete User</string>
    <string name="message_delete_time_log">Delete Time Log</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
